# sandbox

./: .gitignore  CLAUDE.md  CLOUDFLARE_DNS_SETUP.md  DEPLOYMENT.md  DOMAIN_NAME_SUGGESTIONS.md  FINAL_OPTIMIZATION_REPORT.md  GOOGLE_CLOUD_STEP_BY_STEP.md  MIGRATION_SUMMARY.md  PHASE_2_PERFORMANCE_RESULTS.md  PHASE_3_SUMMARY.md  POSTGRES_SETUP.md  PRODUCTION_FIX.md  PRODUCTION_RENT_EXPENSES.md  QUICK_START_AUTH.md  RAILWAY_DEPLOYMENT_GUIDE.md  VERIFY_PRODUCTION.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  copy-rent-tracker.sh  pyproject.toml  railway.json  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_users_table.py  003_add_google_oauth_support.py  004_add_expense_history.py  005_fix_expense_history_fk_ondelete.py  006_remove_payment_method.py  007_add_rent_expenses_table.py  008_add_performance_indexes.py  009_remove_budgets.py  010_remove_unused_expense_fields.py  097a50355fa4_fix_password_hash_nullable_for_sqlite.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  backup.py  categories.py  dashboard.py  expenses.py  export.py  import.py  import_api.py  rent_expenses.py  reports.py  seed.py  tags.py
backend/app/middleware/: query_profiler.py
backend/app/models/: __init__.py  backup.py  budget.py  category.py  expense.py  rent_expense.py  user.py
backend/app/schemas/: __init__.py  auth.py  backup.py  budget.py  category.py  (+2 more)
backend/scripts/: import_excel_local.py  import_rent_expenses.py  migrate_sqlite_to_postgres.py  seed_data.py  update_admin_password.py
(+130 files in other folders)
