[tool.poetry]
name = "expense-tracker-backend"
version = "0.1.0"
description = "Expense Tracker Backend API"
authors = ["Andri Danusasmita"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dateutil = "^2.8.2"
openpyxl = "^3.1.2"
reportlab = "^4.0.7"
pillow = "^10.1.0"
httpx = "^0.25.2"
psycopg2-binary = "^2.9.9"
google-auth = "^2.25.2"
google-auth-oauthlib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
